--- a/src/main/resources/realPokemonArena.fxml
+++ b/src/main/resources/realPokemonArena.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.shape.Rectangle?>
-
 
 <AnchorPane prefHeight="311.0" prefWidth="161.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="$CONTROLLER_NAME$">
    <children>
@@ -16,19 +15,29 @@
             <Image url="@../../../../../Desktop/forestBackGround.jpg" />
          </image>
       </ImageView>
-      <FlowPane layoutX="406.0" layoutY="230.0" prefHeight="0.0" prefWidth="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="406.0" AnchorPane.rightAnchor="0.0">
+      <FlowPane layoutX="406.0" layoutY="230.0" prefHeight="0.0" prefWidth="0.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="198.0" text="Swap Pokemon" />
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="99.0" text="Move 1" />
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="99.0" text="Move 2" />
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="99.0" text="Move 3" />
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="99.0" text="Move 3" />
+            <ProgressBar fx:id="selfHealthProgressBar1" prefHeight="14.0" prefWidth="170.0" progress="1.0" style="-fx-accent: green;">
+               <FlowPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </FlowPane.margin>
+               <padding>
+                  <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
+               </padding>
+            </ProgressBar>
+            <Button fx:id="swapPokemonButton" alignment="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="198.0" text="Swap Pokemon" />
+            <Button fx:id="moveButton1" mnemonicParsing="false" prefHeight="25.0" prefWidth="99.0" text="Move 1" />
+            <Button fx:id="moveButton2" mnemonicParsing="false" prefHeight="25.0" prefWidth="99.0" text="Move 2" />
+            <Button fx:id="moveButton3" mnemonicParsing="false" prefHeight="25.0" prefWidth="99.0" text="Move 3" />
+            <Button fx:id="moveButton4" mnemonicParsing="false" prefHeight="25.0" prefWidth="99.0" text="Move 3" />
          </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </FlowPane>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#964b00" height="50.0" layoutX="406.0" layoutY="186.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#964b00" height="50.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1e1e1e" height="14.0" layoutX="458.0" layoutY="211.0" stroke="BLACK" strokeType="INSIDE" width="134.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#14e050" height="8.0" layoutX="458.0" layoutY="214.0" stroke="BLACK" strokeType="INSIDE" width="134.0" />
-      <ProgressBar layoutX="23.0" layoutY="18.0" prefHeight="14.0" prefWidth="170.0" progress="1.0" style="-fx-region-background: green;" />
+      <ProgressBar fx:id="enemyHealthProgressBar" layoutX="23.0" layoutY="18.0" prefHeight="14.0" prefWidth="170.0" progress="1.0" style="-fx-accent: green;" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="25.0">
+         <padding>
+            <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
+         </padding></ProgressBar>
    </children>
 </AnchorPane>
