Added some sprites

--- a/src/main/resources/realPokemonArena.fxml
+++ b/src/main/resources/realPokemonArena.fxml
@@ -41,3 +41,5 @@
          </padding></ProgressBar>
    </children>
 </AnchorPane>
+
+<!-- <a href="https://pokemondb.net/pokedex/charizard"><img src="https://img.pokemondb.net/sprites/lets-go-pikachu-eevee/normal/charizard.png" alt="Charizard"></a> >
