--- a/src/main/resources/pokemonMenu.fxml
+++ b/src/main/resources/pokemonMenu.fxml
@@ -14,7 +14,7 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.Fearsome_Foursome.Screens.Menu.MenuController">
    <children>
-      <ImageView fx:id="Background" fitHeight="610.0" fitWidth="1001.0">
+      <ImageView fx:id="bird" fitHeight="610.0" fitWidth="1001.0">
          <image>
             <Image url="@../../../../../Downloads/created-a-3d-render-of-a-pokemon-trophy-in-the-grass-wallpaper.jpg" />
          </image>
@@ -87,7 +87,7 @@
       </ImageView>
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="176.0" layoutY="180.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../Downloads/67-670869_its-alolas-early-bird-the-little-woodpecker-is-cute-pokemon-pikipek-removebg-preview.png" />
+            <Image url="@../../../../../Downloads/bird.png" />
          </image>
       </ImageView>
    </children>
