--- a/src/main/resources/pokemonMenu.fxml
+++ b/src/main/resources/pokemonMenu.fxml
@@ -16,7 +16,7 @@
    <children>
       <ImageView fx:id="bird" fitHeight="610.0" fitWidth="1001.0">
          <image>
-            <Image url="@../../../../../Downloads/created-a-3d-render-of-a-pokemon-trophy-in-the-grass-wallpaper.jpg" />
+            <Image url="@background.jpg" />
          </image>
       </ImageView>
       <Button fx:id="btnStart" layoutX="446.0" layoutY="302.0" mnemonicParsing="false" text="Start" textAlignment="CENTER" textFill="#141414">
@@ -62,32 +62,32 @@
       </Text>
       <ImageView fx:id="dragonite" fitHeight="150.0" fitWidth="200.0" layoutX="7.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../Downloads/chocofoxcolin-pokemon-icon-dragonite.png" />
+            <Image url="@dragonite.png" />
          </image>
       </ImageView>
       <ImageView fx:id="pikachu" fitHeight="150.0" fitWidth="200.0" layoutX="86.0" layoutY="419.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../Downloads/ezgif-2-0bc181bca0-removebg-preview.png" />
+            <Image url="@pikachu.png" />
          </image>
       </ImageView>
       <ImageView fx:id="grass3" fitHeight="150.0" fitWidth="200.0" layoutX="861.0" layoutY="432.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../Downloads/196-1969337_pokemon-black-white-which-cute-pokemon-pokemon-gen-5-grass-type-removebg-preview.png" />
+            <Image url="@grass3.png" />
          </image>
       </ImageView>
       <ImageView fx:id="grass2" fitHeight="103.0" fitWidth="125.0" layoutX="624.0" layoutY="443.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../Downloads/ezgif-2-4fceef1f1c-removebg-preview.png" />
+            <Image url="@grass2.png" />
          </image>
       </ImageView>
       <ImageView fx:id="grass1" fitHeight="117.0" fitWidth="93.0" layoutX="289.0" layoutY="483.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../Downloads/ezgif-2-b75abded47-removebg-preview.png" />
+            <Image url="@grass1.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="176.0" layoutY="180.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../Downloads/bird.png" />
+            <Image url="@bird.png" />
          </image>
       </ImageView>
    </children>
