--- a/src/main/resources/realPokemonArena.fxml
+++ b/src/main/resources/realPokemonArena.fxml
@@ -12,7 +12,7 @@
    <children>
       <ImageView fitHeight="311.0" fitWidth="661.0" layoutX="6.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-45.0" AnchorPane.topAnchor="0.0">
          <image>
-            <Image url="@forestBackGround.jpg" />
+            <Image url="@Sprites/forestBackGround.jpg" />
          </image>
       </ImageView>
       <FlowPane layoutX="406.0" layoutY="230.0" prefHeight="0.0" prefWidth="0.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
