--- a/src/main/resources/pokemonMenu.fxml
+++ b/src/main/resources/pokemonMenu.fxml
@@ -16,7 +16,7 @@
    <children>
       <ImageView fx:id="bird" fitHeight="610.0" fitWidth="1001.0">
          <image>
-            <Image url="@background.jpg" />
+            <Image url="@Images/background.jpg" />
          </image>
       </ImageView>
       <Button fx:id="btnStart" layoutX="446.0" layoutY="302.0" mnemonicParsing="false" text="Start" textAlignment="CENTER" textFill="#141414">
@@ -62,32 +62,32 @@
       </Text>
       <ImageView fx:id="dragonite" fitHeight="150.0" fitWidth="200.0" layoutX="7.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@dragonite.png" />
+            <Image url="@Sprites/dragonite.png" />
          </image>
       </ImageView>
       <ImageView fx:id="pikachu" fitHeight="150.0" fitWidth="200.0" layoutX="86.0" layoutY="419.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@pikachu.png" />
+            <Image url="@Images/pikachu.png" />
          </image>
       </ImageView>
       <ImageView fx:id="grass3" fitHeight="150.0" fitWidth="200.0" layoutX="861.0" layoutY="432.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@grass3.png" />
+            <Image url="@Images/grass3.png" />
          </image>
       </ImageView>
       <ImageView fx:id="grass2" fitHeight="103.0" fitWidth="125.0" layoutX="624.0" layoutY="443.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@grass2.png" />
+            <Image url="@Images/grass2.png" />
          </image>
       </ImageView>
       <ImageView fx:id="grass1" fitHeight="117.0" fitWidth="93.0" layoutX="289.0" layoutY="483.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@grass1.png" />
+            <Image url="@Images/grass1.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="176.0" layoutY="180.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@bird.png" />
+            <Image url="@Images/bird.png" />
          </image>
       </ImageView>
    </children>
