--- a/src/main/resources/pokemonSelection.fxml
+++ b/src/main/resources/pokemonSelection.fxml
@@ -7,22 +7,25 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PokemonSelection">
    <children>
+      <ImageView fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@Images/forestBackGround.jpg" />
+         </image>
+      </ImageView>
       <Text fill="#eb0707" layoutY="382.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose a Pokémon." wrappingWidth="399.0169219970703" AnchorPane.bottomAnchor="12.20556640625" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="201.0" AnchorPane.topAnchor="358.79443359375">
          <font>
             <Font size="25.0" />
          </font>
       </Text>
       <Button layoutX="506.0" layoutY="351.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="80.0" text="Cancel" />
-      <FlowPane layoutY="76.0" prefHeight="200.0" prefWidth="250.0" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="0.0">
+      <FlowPane layoutY="76.0" prefHeight="81.0" prefWidth="300.0" AnchorPane.bottomAnchor="319.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="0.0">
          <children>
-            <CheckBox mnemonicParsing="false" prefHeight="81.0" prefWidth="77.0" text="lv.100">
+            <CheckBox mnemonicParsing="false" prefHeight="81.0" prefWidth="77.0" text="lv.100" textFill="#d61a0b">
                <font>
                   <Font size="9.0" />
                </font>
@@ -32,10 +35,84 @@
                   <Image url="@Sprites/CharizardEnemy.png" />
                </image>
             </ImageView>
-            <ProgressBar prefHeight="20.0" prefWidth="172.0" progress="0.0" />
+            <ProgressBar prefHeight="20.0" prefWidth="172.0" progress="1.0" />
          </children>
       </FlowPane>
-      <VBox layoutX="429.0" layoutY="76.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <Button layoutX="399.0" layoutY="351.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="80.0" text="Select" />
+      <Button layoutX="399.0" layoutY="351.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="80.0" text="Select" textFill="#eb1313" />
+      <FlowPane layoutY="90.0" prefHeight="81.0" prefWidth="300.0">
+         <children>
+            <CheckBox mnemonicParsing="false" prefHeight="81.0" prefWidth="77.0" text="lv.100" textFill="#d70808">
+               <font>
+                  <Font size="9.0" />
+               </font>
+            </CheckBox>
+            <ImageView fitHeight="117.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@Sprites/SnorlaxEnemy.png" />
+               </image>
+            </ImageView>
+            <ProgressBar prefHeight="20.0" prefWidth="172.0" progress="1.0" />
+         </children>
+      </FlowPane>
+      <FlowPane layoutX="7.0" layoutY="191.0" prefHeight="81.0" prefWidth="300.0" AnchorPane.leftAnchor="0.0">
+         <children>
+            <CheckBox mnemonicParsing="false" prefHeight="81.0" prefWidth="77.0" text="lv.100">
+               <font>
+                  <Font size="9.0" />
+               </font>
+            </CheckBox>
+            <ImageView fitHeight="117.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@Sprites/VenusaurEnemy.png" />
+               </image>
+            </ImageView>
+            <ProgressBar prefHeight="20.0" prefWidth="172.0" progress="1.0" />
+         </children>
+      </FlowPane>
+      <FlowPane layoutX="289.0" layoutY="14.0" prefHeight="81.0" prefWidth="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <CheckBox mnemonicParsing="false" prefHeight="81.0" prefWidth="77.0" text="lv.100">
+               <font>
+                  <Font size="9.0" />
+               </font>
+            </CheckBox>
+            <ImageView fitHeight="117.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@Sprites/VolcaronaEnemy.png" />
+               </image>
+            </ImageView>
+            <ProgressBar prefHeight="20.0" prefWidth="172.0" progress="1.0" />
+         </children>
+      </FlowPane>
+      <FlowPane layoutX="300.0" layoutY="90.0" prefHeight="81.0" prefWidth="300.0" AnchorPane.bottomAnchor="220.1015625" AnchorPane.rightAnchor="0.0169219970703125" AnchorPane.topAnchor="90.0">
+         <children>
+            <CheckBox mnemonicParsing="false" prefHeight="81.0" prefWidth="77.0" text="lv.100">
+               <font>
+                  <Font size="9.0" />
+               </font>
+            </CheckBox>
+            <ImageView fitHeight="117.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@Sprites/GyaradosEnemy.png" />
+               </image>
+            </ImageView>
+            <ProgressBar prefHeight="20.0" prefWidth="172.0" progress="1.0" />
+         </children>
+      </FlowPane>
+      <FlowPane layoutX="310.0" layoutY="191.0" prefHeight="81.0" prefWidth="300.0">
+         <children>
+            <CheckBox mnemonicParsing="false" prefHeight="81.0" prefWidth="77.0" text="lv.100">
+               <font>
+                  <Font size="9.0" />
+               </font>
+            </CheckBox>
+            <ImageView fitHeight="117.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@Sprites/SceptileEnemy.png" />
+               </image>
+            </ImageView>
+            <ProgressBar prefHeight="20.0" prefWidth="172.0" progress="1.0" />
+         </children>
+      </FlowPane>
    </children>
 </AnchorPane>
