--- a/src/main/resources/pokemonArena.fxml
+++ b/src/main/resources/pokemonArena.fxml
@@ -10,12 +10,12 @@
 
 <AnchorPane prefHeight="311.0" prefWidth="161.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.Fearsome_Foursome.Application.Controllers.ArenaController">
    <children>
-      <ImageView fitHeight="311.0" fitWidth="661.0" layoutX="6.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-45.0" AnchorPane.topAnchor="0.0">
+      <ImageView fitHeight="600.0" fitWidth="1000.0" layoutX="6.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
             <Image url="@Images/forestBackGround.jpg" />
          </image>
       </ImageView>
-      <FlowPane layoutX="406.0" layoutY="230.0" prefHeight="0.0" prefWidth="0.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <FlowPane layoutX="406.0" layoutY="230.0" prefHeight="200.0" prefWidth="200.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
             <ProgressBar fx:id="selfHealthProgressBar1" prefHeight="14.0" prefWidth="170.0" progress="1.0" style="-fx-accent: green;">
                <FlowPane.margin>
@@ -25,7 +25,7 @@
                   <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
                </padding>
             </ProgressBar>
-            <Button fx:id="swapPokemonButton" alignment="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="198.0" text="Swap Pokemon" />
+            <Button fx:id="swapPokemonButton" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#switchToSelection" text="Swap Pokemon" />
             <Button fx:id="moveButton1" mnemonicParsing="false" prefHeight="25.0" prefWidth="99.0" text="Move 1" />
             <Button fx:id="moveButton2" mnemonicParsing="false" prefHeight="25.0" prefWidth="99.0" text="Move 2" />
             <Button fx:id="moveButton3" mnemonicParsing="false" prefHeight="25.0" prefWidth="99.0" text="Move 3" />
@@ -39,12 +39,12 @@
          <padding>
             <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
          </padding></ProgressBar>
-      <ImageView fitHeight="103.0" fitWidth="110.0" layoutX="135.0" layoutY="166.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="218.0" layoutY="230.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Sprites/SceptileAlly.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="79.0" fitWidth="90.0" layoutX="342.0" layoutY="87.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="background" fitHeight="110.0" fitWidth="175.0" layoutX="604.0" layoutY="170.0" pickOnBounds="true" preserveRatio="true" style="-fx-background-size: contain;">
          <image>
             <Image url="@Sprites/SnorlaxEnemy.png" />
          </image>
