--- a/src/main/resources/pokemonSelection.fxml
+++ b/src/main/resources/pokemonSelection.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ProgressBar?>
@@ -12,14 +13,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="309.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.Fearsome_Foursome.Application.Controllers.SelectionController">
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.Fearsome_Foursome.Application.Controllers.SelectionController">
    <children>
-      <ImageView fx:id="background" fitHeight="309.0" fitWidth="615.0" layoutX="200.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-15.0" AnchorPane.topAnchor="0.0">
+      <ImageView fx:id="background" fitHeight="600.0" fitWidth="1000.0" layoutX="1000.0" layoutY="600.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-15.0" AnchorPane.topAnchor="0.0">
          <image>
             <Image url="@Images/forestBackGround.jpg" />
          </image>
       </ImageView>
-      <Text fx:id="textSelection" fill="#e8e2e7" layoutX="14.0" layoutY="249.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose a Pokémon" wrappingWidth="306.94140625">
+      <Text fx:id="textSelection" layoutX="35.0" layoutY="562.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose a Pokémon" wrappingWidth="264.94140625" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="635.05859375">
          <font>
             <Font size="28.0" />
          </font>
@@ -31,12 +32,12 @@
             </DropShadow>
          </effect>
       </Text>
-      <Button fx:id="btnSelect" layoutX="374.0" layoutY="247.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="77.0" style="-fx-background-color: GREEN;" text="Select" AnchorPane.leftAnchor="374.0" AnchorPane.topAnchor="247.0" />
-      <Button fx:id="btnCancel" layoutX="475.0" layoutY="247.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="77.0" style="-fx-background-color: GREEN;" text="Cancel" />
-      <HBox fx:id="pokemon1" layoutX="8.0" layoutY="33.0" prefHeight="68.0" prefWidth="297.0" AnchorPane.leftAnchor="8.0">
+      <Button fx:id="btnSelect" layoutX="413.0" layoutY="529.0" mnemonicParsing="false" onMouseClicked="#selectAndSwitchToArena" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: GREEN;" text="Select" textFill="WHITE" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="400.0" />
+      <Button fx:id="btnCancel" layoutX="555.0" layoutY="555.0" mnemonicParsing="false" onMouseClicked="#switchToArena" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: GREEN;" text="Cancel" textFill="WHITE" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="600.0" />
+      <HBox fx:id="pokemon1" layoutX="8.0" layoutY="33.0" prefHeight="150.0" prefWidth="500.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="20.0">
          <children>
             <CheckBox fx:id="checkBox1" mnemonicParsing="false" prefHeight="26.0" prefWidth="68.0" text="lv.100" textFill="#e1dcdc" />
-            <ImageView fx:id="sprite1" fitHeight="37.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="sprite1" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@Sprites/CharizardEnemy.png" />
                </image>
@@ -44,11 +45,14 @@
             <Text fx:id="health1" fill="#f5f3f3" strokeType="OUTSIDE" strokeWidth="0.0" text="500/500" wrappingWidth="71.41666793823242" />
             <ProgressBar fx:id="currentHealth1" nodeOrientation="LEFT_TO_RIGHT" prefHeight="20.0" prefWidth="115.0" progress="1.0" />
          </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </HBox>
-      <HBox fx:id="pokemon3" layoutX="8.0" layoutY="101.0" prefHeight="68.0" prefWidth="297.0" AnchorPane.leftAnchor="8.0">
+      <HBox fx:id="pokemon3" layoutX="8.0" layoutY="101.0" prefHeight="150.0" prefWidth="500.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="200.0">
          <children>
             <CheckBox fx:id="checkBox3" mnemonicParsing="false" prefHeight="26.0" prefWidth="68.0" text="lv.100" textFill="#f2ebeb" />
-            <ImageView fx:id="sprite3" fitHeight="37.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="sprite3" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@Sprites/BlastoiseEnemy.png" />
                </image>
@@ -56,11 +60,14 @@
             <Text fx:id="health3" fill="#f5f3f3" strokeType="OUTSIDE" strokeWidth="0.0" text="500/500" wrappingWidth="69.41666793823242" />
             <ProgressBar fx:id="currentHealth3" nodeOrientation="LEFT_TO_RIGHT" prefHeight="20.0" prefWidth="115.0" progress="1.0" />
          </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </HBox>
-      <HBox fx:id="pokemon5" layoutX="7.0" layoutY="155.0" prefHeight="68.0" prefWidth="297.0" AnchorPane.leftAnchor="7.0">
+      <HBox fx:id="pokemon5" layoutX="7.0" layoutY="155.0" prefHeight="150.0" prefWidth="500.0" spacing="10.0" AnchorPane.bottomAnchor="90.0" AnchorPane.leftAnchor="10.0">
          <children>
             <CheckBox fx:id="checkBox5" mnemonicParsing="false" prefHeight="26.0" prefWidth="68.0" text="lv.100" textFill="#f2ecec" />
-            <ImageView fx:id="sprite5" fitHeight="37.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="sprite5" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@Sprites/GyaradosEnemy.png" />
                </image>
@@ -68,11 +75,14 @@
             <Text fx:id="health5" fill="#f5f3f3" strokeType="OUTSIDE" strokeWidth="0.0" text="500/500" wrappingWidth="63.41666793823242" />
             <ProgressBar fx:id="currentHealth5" nodeOrientation="LEFT_TO_RIGHT" prefHeight="20.0" prefWidth="115.0" progress="1.0" />
          </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </HBox>
-      <HBox fx:id="pokemon2" layoutX="303.0" layoutY="33.0" prefHeight="68.0" prefWidth="297.0">
+      <HBox fx:id="pokemon2" layoutX="689.0" layoutY="67.0" prefHeight="150.0" prefWidth="500.0" spacing="10.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0">
          <children>
             <CheckBox fx:id="checkBox2" mnemonicParsing="false" prefHeight="26.0" prefWidth="68.0" text="lv.100" textFill="#f2e9e9" />
-            <ImageView fx:id="sprite2" fitHeight="37.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="sprite2" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@Sprites/SceptileEnemy.png" />
                </image>
@@ -80,11 +90,14 @@
             <Text fx:id="health2" fill="#f5f3f3" strokeType="OUTSIDE" strokeWidth="0.0" text="500/500" wrappingWidth="75.41666793823242" />
             <ProgressBar fx:id="currentHealth2" nodeOrientation="LEFT_TO_RIGHT" prefHeight="20.0" prefWidth="115.0" progress="1.0" />
          </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </HBox>
-      <HBox fx:id="pokemon4" layoutX="303.0" layoutY="101.0" prefHeight="68.0" prefWidth="297.0">
+      <HBox fx:id="pokemon4" layoutX="703.0" layoutY="232.0" prefHeight="150.0" prefWidth="500.0" spacing="10.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="200.0">
          <children>
             <CheckBox fx:id="checkBox4" mnemonicParsing="false" prefHeight="26.0" prefWidth="68.0" text="lv.100" textFill="#e8e0e0" />
-            <ImageView fx:id="sprite4" fitHeight="37.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="sprite4" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@Sprites/StaraptorEnemy.png" />
                </image>
@@ -92,11 +105,14 @@
             <Text fx:id="health4" fill="#f5f3f3" strokeType="OUTSIDE" strokeWidth="0.0" text="500/500" wrappingWidth="68.41666793823242" />
             <ProgressBar fx:id="currentHealth4" nodeOrientation="LEFT_TO_RIGHT" prefHeight="20.0" prefWidth="115.0" progress="1.0" />
          </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </HBox>
-      <HBox fx:id="pokemon6" layoutX="303.0" layoutY="155.0" prefHeight="68.0" prefWidth="297.0">
+      <HBox fx:id="pokemon6" layoutX="703.0" layoutY="446.0" prefHeight="150.0" prefWidth="500.0" spacing="10.0" AnchorPane.bottomAnchor="90.0" AnchorPane.rightAnchor="0.0">
          <children>
             <CheckBox fx:id="checkBox6" mnemonicParsing="false" prefHeight="26.0" prefWidth="68.0" text="lv.100" textFill="#f5f3f3" />
-            <ImageView fx:id="sprite6" fitHeight="37.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="sprite6" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@Sprites/VolcaronaEnemy.png" />
                </image>
@@ -104,6 +120,9 @@
             <Text fx:id="health6" fill="#f5f3f3" strokeType="OUTSIDE" strokeWidth="0.0" text="500/500" wrappingWidth="66.41666793823242" />
             <ProgressBar fx:id="currentHealth6" nodeOrientation="LEFT_TO_RIGHT" prefHeight="20.0" prefWidth="115.0" progress="1.0" />
          </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </HBox>
    </children>
 </AnchorPane>
