--- a/src/main/resources/pokemonArena.fxml
+++ b/src/main/resources/pokemonArena.fxml
@@ -49,5 +49,6 @@
                 <Image url="@Sprites/SnorlaxEnemy.png" />
             </image>
         </ImageView>
+      <Button fx:id="btnQuit" layoutX="50.0" layoutY="450.0" mnemonicParsing="false" onMouseClicked="#goHome" text="Quit" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="25.0" />
     </children>
 </AnchorPane>
