--- a/src/main/resources/pokemonSelection.fxml
+++ b/src/main/resources/pokemonSelection.fxml
@@ -124,5 +124,6 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </HBox>
+      <Button fx:id="btnHome" layoutX="815.0" layoutY="525.0" mnemonicParsing="false" onMouseClicked="#returnHome" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: GREEN;" text="Return Home" textFill="WHITE" />
    </children>
 </AnchorPane>
